--- a/online-exam-portal/src/app/components/exam-page/exam-page.component.html
+++ b/online-exam-portal/src/app/components/exam-page/exam-page.component.html
@@ -10,12 +10,12 @@
 </div>
 
 <!-- Voice detection warnings -->
-<div *ngIf="voiceWarningCount > 0" class="warning-overlay voice-warning">
+<!-- <div *ngIf="voiceWarningCount > 0" class="warning-overlay voice-warning">
   <div class="warning-box">
     <mat-icon>mic</mat-icon>
     <span>Proctoring Alert: Voice Detected ({{ voiceWarningCount }}/{{ maxVoiceWarnings }})</span>
   </div>
-</div>
+</div> -->
 
 <!-- Loading overlay -->
 <div *ngIf="isLoading" class="loading-shade">
